fixed header wrapping

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-html {
+* {
     box-sizing: border-box;
+}
+
+html,
+body {
     margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
 
 .header {
+    margin: 0;
     display: flex;
     width: 100%;
     box-sizing: border-box;
@@ -15,7 +21,6 @@ html {
     padding-bottom: 1vw;
     padding-left: 7vw;
     padding-right: 7vw;
-    color: #000;
     font-family: 'Roboto';
     font-weight: 400;
     font-size: calc((1.3 - 1) * 1.2vw + 1rem);
@@ -23,6 +28,7 @@ html {
     position: relative;
     z-index: 2;
     pointer-events: auto;
+    border: 1px solid blue;
 
 }
 
@@ -32,12 +38,14 @@ html {
     border: 3px solid red;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .logo * {
     max-width: 100%;
     max-height: 80px;
 }
+
 
 .header-nav-wrapper {
     display: flex;
@@ -52,16 +60,24 @@ html {
     text-align: right;
     margin-left: auto;
     padding-left: 2.2vw;
+
 }
 
 .header-nav-list {
-    margin-top: 1vh;
-    padding: 1.6px 0px;
+    border: 1px solid black;
     display: flex;
-    align-items: top;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+/* links buttons */
+.link a {
+    color: #000;
 }
 
 .link {
     padding: 0px 0px 0px 20px;
     border: blue 1px solid;
+    margin-top: 2vh;
 }
